k8s/nats-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
  namespace: nats-jetstream-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats:2.10-alpine
          args:
            - "-js"
            - "-sd"
            - "/data/jetstream"
            - "-m"
            - "8222"
          ports:
            - name: client
              containerPort: 4222
            - name: monitoring
              containerPort: 8222
          volumeMounts:
            - name: nats-data
              mountPath: /data/jetstream
          readinessProbe:
            httpGet:
              path: /healthz
              port: monitoring
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: monitoring
            initialDelaySeconds: 10
            periodSeconds: 10
      volumes:
        - name: nats-data
          persistentVolumeClaim:
            claimName: nats-jetstream-pvc
