k8s/app-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: nats-jetstream-service
  namespace: nats-jetstream-app
spec:
  type: ClusterIP
  selector:
    app: nats-app
  ports:
    - name: http
      port: 80
      targetPort: http
