k8s/nats-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: nats-jetstream-app
spec:
  type: ClusterIP
  selector:
    app: nats
  ports:
    - name: client
      port: 4222
      targetPort: client
    - name: monitoring
      port: 8222
      targetPort: monitoring
